[build-system]
requires = ["setuptools==67.8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dedoc-utils"
authors = [
    {name = "Dedoc team", email = "dedoc@ispras.ru"}
]
maintainers = [
    {name = "Oksana Belyaeva", email = "belyaeva@ispras.ru"},
    {name = "Andrew Perminov", email = "perminov@ispras.ru"},
    {name = "Anastasiya Bogatenkova", email = "bogatenkova.anastasiya@mail.ru"}
]
classifiers=[
        "Intended Audience :: Developers",
        "License :: OSI Approved :: Apache Software License",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3 :: Only",
]
description = "Utils for automatic document images processing"
keywords = ["text detection", "text recognition", "OCR", "deep learning", "computer vision"]
readme="README.md"
license = {file = "LICENSE"}
dynamic = ["version"]
requires-python = ">=3.6"
dependencies = [
    "numpy==1.23.3",
    "opencv-python==4.6.0.66",
    "pyclipper==1.3.0.post4",  # for doctr
    "pytesseract==0.3.10",
    "scikit_learn==1.0.2",
    "shapely==2.0.1",  # for doctr
    "tqdm==4.65.0",  # for doctr
]

[project.optional-dependencies]
torch = [
    "torch~=1.11.0",
    "torchvision~=0.12.0"
]
dev = [
    "build==0.10.0",
    "twine==4.0.2",
    "pycodestyle==2.7.0",
    "flake8==3.9.2",
    "flake8-annotations==2.6.2",
    "pyflakes==2.3.1"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["dedocutils*"]

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[project.urls]
homepage = "https://github.com/ispras/dedoc-utils"
repository = "https://github.com/ispras/dedoc-utils"
documentation = "https://github.com/ispras/dedoc-utils/blob/master/README.md"
changelog = "https://github.com/ispras/dedoc-utils/blob/master/CHANGELOG.md"
